apps/librex/librex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librex
  namespace: default
  labels:
    app: librex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librex
  template:
    metadata:
      labels:
        app: librex
    spec:
      containers:
      - name: librex
        image: ghcr.io/nohoster/librex:130723
        ports:
        - containerPort: 8080
        securityContext:
        #  readOnlyRootFilesystem: true
        #  runAsGroup: 1000
        #  runAsNonRoot: true
        #  runAsUser: 1000
        #  allowPrivilegeEscalation: false
        #  capabilities: 
        #    drop: 
        #    - ALL
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---

apiVersion: v1
kind: Service
metadata:
  name: librex-svc
  namespace: default
spec:
  selector:
    app: librex
  type: ClusterIP

  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
